charts/kustomize-fag-ingress-istio/base/fag-peerauthentication-mTLS.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: fag-peer-authentication
spec:
  mtls:
    mode: STRICT #PERMISSIVE
