charts/kustomize-fag-ingress-istio/base/fag-deployment-order-gateway-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fag-order-gateway-canary
  labels:
    app: fag-order-gateway-canary
spec:
  selector:
    matchLabels:
      app: fag-order-gateway-canary
  replicas: 5
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fag-order-gateway-canary
    spec:
      serviceAccountName: fag-sa
      containers:
        - name: fag-order-gateway-canary
          image: sklrsn/order-gateway:latest
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /order-gateway/health
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 8080
              name: fag-og
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: fag-order-gateway-canary
spec:
  selector:
    app: fag-order-gateway-canary
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: og-canary
      protocol: TCP
      port: 8080
      targetPort: 8080
